# redwing-os

./: .gitignore  Makefile  README.md
common/: Cargo.toml
common/human_size/: Cargo.toml
common/human_size/src/: lib.rs
common/ioctl_req/: Cargo.toml
common/ioctl_req/src/: lib.rs
common/path/: Cargo.toml
common/path/src/: lib.rs
common/signal_structs/: Cargo.toml
common/signal_structs/src/: lib.rs
common/syserr/: Cargo.toml
common/syserr/src/: lib.rs
fs/: .gitignore  Cargo.toml
fs/redwing_efs/: Cargo.toml
fs/redwing_efs/src/: bitmap.rs  buffer.rs  cache.rs  config.rs  consts.rs  dev.rs  dirent.rs  fs.rs  inode.rs  lib.rs  superblock.rs  vfs_impl.rs
fs/redwing_efs/src/inode/: tests.rs
fs/redwing_ram/: Cargo.toml
fs/redwing_ram/src/: dir.rs  file.rs  fs.rs  lib.rs
fs/redwing_vfs/: Cargo.toml
fs/redwing_vfs/src/: error.rs  lib.rs  name.rs
kernel/: .gitignore  Cargo.toml  kernel.ld
kernel/.cargo/: config.toml
kernel/scripts/: print_address.py
kernel/src/: elf.rs  error.rs  init.rs  io.rs  logging.rs  main.rs  params.rs  pipe.rs  print.rs  test.rs  timer_events.rs  trap.rs
kernel/src/arch/riscv64/: cpu.rs  ctx.rs  memlayout.rs  memory.rs  mod.rs  pgtable.rs  plic.rs  timer.rs  trap.rs
kernel/src/arch/riscv64/asm/: entry.S  mod.rs  switch.S  trap_vec.S
kernel/src/devices/: block.rs  mod.rs  terminal.rs
kernel/src/devices/tty/: discipline.rs  mod.rs
kernel/src/drivers/: uart.rs
kernel/src/drivers/virtio/: block.rs  features.rs  mmio.rs  mod.rs  types.rs
kernel/src/fs/: fcntl.rs  file.rs  ioctl.rs  mod.rs  pathname.rs  tests.rs
kernel/src/fs/vfs/: dev.rs  mod.rs  mount.rs
kernel/src/fs/vfs/proc/: info.rs  mod.rs  root.rs  tasks.rs
kernel/src/mmu/: buddy.rs  heap.rs  mod.rs  pgtable.rs  slab.rs  types.rs  vm.rs  vm_area.rs
kernel/src/proc/: cpu.rs  exec.rs  group.rs  id.rs  mod.rs  session.rs  signal.rs  task.rs
kernel/src/proc/sched/: cfs.rs  mod.rs  rr.rs
kernel/src/sync/: condvar.rs  irq.rs  mod.rs  percpu.rs  sleep.rs  wait.rs
kernel/src/sync/spin/: mod.rs  once.rs  spinlock.rs
kernel/src/syscall/: fs.rs  mmu.rs  mod.rs  proc.rs
kernel/src/utils/: adapters.rs  id.rs  mod.rs  string.rs  vectool.rs
kernel/syscall_macro/: Cargo.toml
kernel/syscall_macro/src/: lib.rs
mkfs/: .gitignore  Cargo.toml
mkfs/src/: args.rs  error.rs  img_file.rs  main.rs  mkfs.rs
ulib/rw_ulib/: Cargo.toml
ulib/rw_ulib/src/: env.rs  error.rs  heap.rs  lib.rs  process.rs  signal.rs  syscall.rs
ulib/rw_ulib/src/fs/: file.rs  mod.rs
ulib/rw_ulib/src/io/: buffer.rs  ioctl.rs  mod.rs  print.rs
ulib/rw_ulib_types/: Cargo.toml
ulib/rw_ulib_types/src/: fcntl.rs  ioctl.rs  lib.rs  signal.rs  time.rs
user/: Cargo.toml  Makefile  user.ld
user/.cargo/: config.toml
user/src/: cat.rs  echo.rs  env.rs  kill.rs  loop.rs  ls.rs  mkdir.rs  ps.rs  rm.rs  rmdir.rs  test_signal.rs
user/src/sh/: ast.rs  main.rs  parser.rs  utils.rs
user/src/sh/interpreter/: internal_cmd.rs  mod.rs  utils.rs
